--- a/ete-project/Gold_Orders.ipynb
+++ b/ete-project/Gold_Orders.ipynb
@@ -5,6 +5,24 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "140af11c-16e2-4fb6-8848-d0cf3c8c6674",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from delta.tables import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
       "byteLimit": 2048000,
       "rowLimit": 10000
@@ -18,27 +36,7 @@
    },
    "outputs": [],
    "source": [
-    "df = spark.sql(\"select * from `ete-project`.silver.orders\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "fa7e9514-d52a-4e30-924a-e0e91f6a1754",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
+    "df = spark.sql(\"select * from ete_project.silver.orders\")\n",
     "df.display()"
    ]
   },
@@ -60,9 +58,9 @@
    },
    "outputs": [],
    "source": [
-    "df_dim_cust = spark.sql('select dimcustomerkey,customer_id as dim_customer_id from `ete-project`.gold.dimcustomers')\n",
+    "df_dim_cust = spark.sql('select dimcustomerkey,customer_id as dim_customer_id from ete_project.gold.dimcustomers')\n",
     "\n",
-    "df_dim_prod = spark.sql('select product_id as dimproductkey,product_id as dim_product_id from `ete-project`.gold.dimproducts')\n"
+    "df_dim_prod = spark.sql('select product_id as dimproductkey,product_id as dim_product_id from ete_project.gold.dimproducts')\n"
    ]
   },
   {
@@ -126,27 +124,6 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "2055799a-6f09-4ee0-ab1a-9327e09bbabd",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from  delta.tables import DeltaTable"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
      "nuid": "84b5344c-85a5-4d55-b77f-e0340f519a44",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -155,11 +132,11 @@
    },
    "outputs": [],
    "source": [
-    "if spark.catalog.tableExists(\"`ete-project`.gold.factorders\"):\n",
-    "    dlt_obj = DeltaTable.forName(spark,'`ete-project`.gold.factorders')\n",
+    "if spark.catalog.tableExists(\"ete_project.gold.factorders\"):\n",
+    "    dlt_obj = DeltaTable.forName(spark,'ete_project.gold.factorders')\n",
     "    dlt_obj.alias('t').merge(df_fact_new.alias('s'), 't.order_id = s.order_id').whenMatchedUpdateAll().whenNotMatchedInsertAll().execute()\n",
     "else:\n",
-    "    df_fact_new.write.format('delta').option('path','abfss://gold@azadlsgen7428.dfs.core.windows.net/factorders').saveAsTable('`ete-project`.gold.factorders')\n",
+    "    df_fact_new.write.format('delta').option('path','abfss://sales@adls7428.dfs.core.windows.net/gold/factorders').saveAsTable('ete_project.gold.factorders')\n",
     "\n"
    ]
   },
@@ -184,7 +161,7 @@
    "source": [
     "%sql\n",
     "\n",
-    "select * from `ete-project`.gold.factorders;"
+    "select * from ete_project.gold.factorders;"
    ]
   }
  ],
@@ -206,7 +183,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 6486506981571192,
+     "commandId": 6722382261994422,
      "dataframes": [
       "_sqldf"
      ]
