--- a/ete-project/Gold_customers.ipynb
+++ b/ete-project/Gold_customers.ipynb
@@ -19,7 +19,8 @@
    "outputs": [],
    "source": [
     "from pyspark.sql.functions import *\n",
-    "from pyspark.sql.types import *"
+    "from pyspark.sql.types import *\n",
+    "from delta.tables import DeltaTable"
    ]
   },
   {
@@ -48,7 +49,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "ab155de8-6345-4a80-bb3f-0f048946a53c",
      "showTitle": false,
@@ -86,7 +90,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "f92ede55-668a-41d1-ae1f-b2249cdbf0cb",
      "showTitle": false,
@@ -110,28 +117,24 @@
      "inputWidgets": {},
      "nuid": "14ab525a-9eef-4a13-ad85-408ed85fb3e7",
      "showTitle": false,
-     "tableResultSettingsMap": {
-      "0": {
-       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1770514072208}",
-       "filterBlob": null,
-       "queryPlanFiltersBlob": null,
-       "tableResultIndex": 0
-      }
-     },
+     "tableResultSettingsMap": {},
      "title": ""
     }
    },
    "outputs": [],
    "source": [
     "df = df.dropDuplicates(subset=['customer_id'])\n",
-    "df.limit(10).display()"
+    "df.count()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "a292be39-8d7c-4c91-8fac-2f06a95b70c1",
      "showTitle": false,
@@ -161,48 +164,21 @@
    },
    "outputs": [],
    "source": [
-    "if initial_load_flag == 1:\n",
-    "  df_old = spark.sql(\"select dimcustomerkey,customer_id,create_date,update_date from ete_project.gold.Dimcustomers\")\n",
+    "if spark.catalog.tableExists('ete_project.gold.dimcustomers'):\n",
+    "  df_old = spark.sql(\"select dimcustomerkey,customer_id,create_date,update_date from ete_project.gold.dimcustomers\")\n",
     "else:\n",
     "  df_old = spark.sql(\"select 0 dimcustomerkey,customer_id, 0 create_date, 0 update_date from ete_project.silver.customers where 1=0\")\n",
-    "df_old.display()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "c0e18ccd-73e1-4c74-ac1e-079519fd538e",
-     "showTitle": false,
-     "tableResultSettingsMap": {
-      "0": {
-       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1770514739608}",
-       "filterBlob": null,
-       "queryPlanFiltersBlob": null,
-       "tableResultIndex": 0
-      }
-     },
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "df_join = df.join(df_old,df.customer_id == df_old.customer_id,'left')\n",
-    "df_join.display()\n",
-    "\n"
+    "df_old.display()\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "b8da0d4a-8622-4d39-8a33-de0d22c104a7",
      "showTitle": false,
@@ -250,45 +226,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
-     "inputWidgets": {},
-     "nuid": "9f6bce03-45df-45ec-a79c-9f901aba3e7c",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "source": [
-    "##Surrogate Key On All The Values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
       "byteLimit": 2048000,
       "rowLimit": 10000
      },
-     "inputWidgets": {},
-     "nuid": "a62f5c6b-1039-4757-9a69-d45cc4864695",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "df= df.withColumn('dimcustomerkey',monotonically_increasing_id()+lit(1))\n",
-    "df.display()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "7723d359-9f51-4c32-a958-617eb9909457",
      "showTitle": false,
@@ -301,10 +242,43 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "c0e18ccd-73e1-4c74-ac1e-079519fd538e",
+     "showTitle": false,
+     "tableResultSettingsMap": {
+      "0": {
+       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1770514739608}",
+       "filterBlob": null,
+       "queryPlanFiltersBlob": null,
+       "tableResultIndex": 0
+      }
+     },
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df_join = df.join(df_old,df.customer_id == df_old.old_customer_id,'left')\n",
+    "df_join.display()\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "d4d56aa8-94dd-4d91-9d18-8abfcbdefab0",
      "showTitle": false,
@@ -328,7 +302,14 @@
      "inputWidgets": {},
      "nuid": "97faba31-8a52-4c35-9b4b-d7f26319e0af",
      "showTitle": false,
-     "tableResultSettingsMap": {},
+     "tableResultSettingsMap": {
+      "0": {
+       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1770515789158}",
+       "filterBlob": null,
+       "queryPlanFiltersBlob": null,
+       "tableResultIndex": 0
+      }
+     },
      "title": ""
     }
    },
@@ -344,7 +325,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "69fe8a62-d5d7-4a83-9840-3f5c7937cb35",
      "showTitle": false,
@@ -368,7 +352,14 @@
      "inputWidgets": {},
      "nuid": "6beab6c2-73ac-4888-b67f-839799748244",
      "showTitle": false,
-     "tableResultSettingsMap": {},
+     "tableResultSettingsMap": {
+      "0": {
+       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1770515805694}",
+       "filterBlob": null,
+       "queryPlanFiltersBlob": null,
+       "tableResultIndex": 0
+      }
+     },
      "title": ""
     }
    },
@@ -393,31 +384,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 0,
+   "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
       "byteLimit": 2048000,
       "rowLimit": 10000
      },
-     "inputWidgets": {},
-     "nuid": "233c4187-b859-473b-89e7-9037e8960a33",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "df_old.display()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "e57fbec0-5f45-4288-9538-0b66b7e2a64a",
      "showTitle": false,
@@ -515,7 +488,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "81a41246-a924-4369-9c9a-bb434db30f3f",
      "showTitle": false,
@@ -524,7 +500,7 @@
     }
    },
    "source": [
-    "##Surrogate Key from 1"
+    "##Adding Surrogate Key to df_new"
    ]
   },
   {
@@ -552,7 +528,7 @@
    },
    "outputs": [],
    "source": [
-    "df_new = df_new.withColumn('dimcustomerkey',monotonically_increasing_id()+lit(1))\n",
+    "df_new = df_new.withColumn('dimcustomerkey',monotonically_increasing_id()+ lit(1))\n",
     "df_new.display()"
    ]
   },
@@ -560,7 +536,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "c4d24b62-5d92-4d83-b5db-7e4e5e53ad25",
      "showTitle": false,
@@ -590,10 +569,10 @@
    },
    "outputs": [],
    "source": [
-    "if initial_load_flag == 1:\n",
+    "if (initial_load_flag == \"0\"):\n",
     "  max_surrogate_key = 0\n",
     "else:\n",
-    "  df_maxsur = spark.sql(\"select max(dimcustomerkey) as max_surrogate_key from `ete-project`.gold.Dimcustomers\")\n",
+    "  df_maxsur = spark.sql(\"select max(dimcustomerkey) as max_surrogate_key from ete_project.gold.dimcustomers\")\n",
     "  \n",
     "  ##Converting df_maxsur to max_surrogate_key variable\n",
     "  max_surrogate_key = df_maxsur.collect()[0]['max_surrogate_key']\n",
@@ -619,35 +598,18 @@
    },
    "outputs": [],
    "source": [
-    "df_new = df_new.withColumn('dimcustomerkey',lit(max_surrogate_key)+col('dimcustomerkey'))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "a9b1675d-e2b3-4812-94d5-c4095b7e6fe9",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "df_new.display()"
+    "df_new = df_new.withColumn(\"dimcustomerkey\",lit(max_surrogate_key)+ col(\"dimcustomerkey\"))\n",
+    "df_new.display()\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "e4e6b0c8-0447-4a38-a1b8-1a66a8ff0b2e",
      "showTitle": false,
@@ -712,7 +674,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "5299001d-d1e5-4b8b-b60f-821dbc79e3bd",
      "showTitle": false,
@@ -734,48 +699,26 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "5e01d949-7c45-4776-a3ab-38291827735f",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from delta.tables import DeltaTable"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
      "nuid": "13468964-6038-42e4-b394-292efe4cfd21",
-     "showTitle": false,
+     "showTitle": true,
      "tableResultSettingsMap": {},
-     "title": ""
+     "title": "Cell 30"
     }
    },
    "outputs": [],
    "source": [
-    "if spark.catalog.tableExists(\"`ete-project`.gold.Dimcustomers\"):\n",
-    "  dlt_obj = DeltaTable.forPath(spark, \"abfss://gold@azadlsgen7428.dfs.core.windows.net/dimcustomers\")\n",
+    "if spark.catalog.tableExists(\"ete_project.gold.dimcustomers\"):\n",
+    "  dlt_obj = DeltaTable.forPath(spark, \"abfss://sales@adls7428.dfs.core.windows.net/gold/dimcustomers\")\n",
     "\n",
     "  dlt_obj.alias('trgt').merge(df_final.alias('src'), 'trgt.dimcustomerkey = src.dimcustomerkey') \\\n",
     "    .whenMatchedUpdateAll() \\\n",
     "    .whenNotMatchedInsertAll() \\\n",
     "    .execute()\n",
     "else:\n",
-    "    df_final.write.mode(\"overwrite\") \\\n",
+    "    df_final.write.mode(\"append\") \\\n",
     "    .format(\"delta\") \\\n",
-    "    .option('path','abfss://gold@azadlsgen7428.dfs.core.windows.net/dimcustomers') \\\n",
-    "    .saveAsTable(\"`ete-project`.gold.Dimcustomers\")\n",
-    "  "
+    "    .option('path','abfss://sales@adls7428.dfs.core.windows.net/gold/dimcustomers') \\\n",
+    "    .saveAsTable(\"ete_project.gold.dimcustomers\")"
    ]
   },
   {
@@ -789,9 +732,16 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "62686d7a-b798-48d0-80ff-9a55a0d41cbf",
+     "nuid": "982cbd4e-934e-47d3-9d3a-e5d972ba2a42",
      "showTitle": false,
-     "tableResultSettingsMap": {},
+     "tableResultSettingsMap": {
+      "0": {
+       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1770517635486}",
+       "filterBlob": null,
+       "queryPlanFiltersBlob": null,
+       "tableResultIndex": 0
+      }
+     },
      "title": ""
     }
    },
@@ -799,7 +749,7 @@
    "source": [
     "%sql\n",
     "\n",
-    "select * from `ete-project`.gold.Dimcustomers;"
+    "select * from ete_project.gold.dimcustomers;"
    ]
   }
  ],
@@ -815,7 +765,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 8751886277658478,
+     "commandId": 6722382261994468,
      "dataframes": [
       "_sqldf"
      ]
@@ -825,7 +775,7 @@
    "notebookName": "Gold_customers",
    "widgets": {
     "initial_load_flag": {
-     "currentValue": "0",
+     "currentValue": "1",
      "nuid": "caea7606-d859-4240-b495-9a3ae301f480",
      "typedWidgetInfo": {
       "autoCreated": false,
