--- a/ete-project/Silver_Customers.ipynb
+++ b/ete-project/Silver_Customers.ipynb
@@ -140,7 +140,8 @@
    "outputs": [],
    "source": [
     "df = df.withColumn('name',concat(col('first_name'),lit(' '),col('last_name')))\n",
-    "df = df.drop('first_name','last_name')"
+    "df = df.drop('first_name','last_name')\n",
+    "df.display()\n"
    ]
   },
   {
@@ -163,6 +164,30 @@
    "source": [
     "df.write.format('delta').mode('append').option('path','abfss://sales@adls7428.dfs.core.windows.net/silver/customers').saveAsTable('ete_project.silver.customers')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "7cbbd034-9e61-4f17-acb4-11ec7c7b53d8",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "\n",
+    "select * from ete_project.silver.customers;"
+   ]
   }
  ],
  "metadata": {
@@ -177,7 +202,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 4703492410559973,
+     "commandId": 6722382261994473,
      "dataframes": [
       "_sqldf"
      ]
