--- a/ete-project/Bronze Notebook.ipynb
+++ b/ete-project/Bronze Notebook.ipynb
@@ -58,7 +58,14 @@
      "inputWidgets": {},
      "nuid": "220040c8-1dd3-4756-bccc-2c4ecdee039a",
      "showTitle": false,
-     "tableResultSettingsMap": {},
+     "tableResultSettingsMap": {
+      "0": {
+       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1770517168245}",
+       "filterBlob": null,
+       "queryPlanFiltersBlob": null,
+       "tableResultIndex": 0
+      }
+     },
      "title": ""
     }
    },
@@ -109,7 +116,7 @@
    "notebookName": "Bronze Notebook",
    "widgets": {
     "folder_name": {
-     "currentValue": "orders",
+     "currentValue": "customers",
      "nuid": "4bbf6e23-1aa0-4f33-9b7e-5f2d281af6ef",
      "typedWidgetInfo": {
       "autoCreated": false,
@@ -155,7 +162,7 @@
       "name": "source_sub_folder",
       "options": {
        "widgetType": "text",
-       "autoCreated": false,
+       "autoCreated": null,
        "validationRegex": null
       }
      }
@@ -181,7 +188,7 @@
       "name": "target_sub_folder",
       "options": {
        "widgetType": "text",
-       "autoCreated": false,
+       "autoCreated": null,
        "validationRegex": null
       }
      }
